--- a/babel.config.json
+++ b/babel.config.json
@@ -1,11 +1,14 @@
 {
   "presets": [
-    ["@babel/preset-env", {
-      "targets": {
-        "node": 20
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": 20
+        }
       }
-    }],
-    ["@babel/preset-typescript"],
+    ],
+    ["@babel/preset-typescript"]
   ],
   "comments": false
 }
