--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "prebuild:run": "npm run clean",
     "build": "ncc build src/index.ts --out dist --minify --target es2022",
     "build:watch": "npm run build -- --watch",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix",
+    "lint": "biome check .",
+    "lint:fix": "npm run lint -- --apply",
     "type-check": "tsc --noEmit",
     "test": "jest",
     "test:coverage": "jest --coverage",
@@ -21,9 +21,7 @@
     "type": "git",
     "url": "git+https://github.com/illandril/FoundryVTT-package-release-action.git"
   },
-  "keywords": [
-    "FoundryVTT"
-  ],
+  "keywords": ["FoundryVTT"],
   "author": "Joe Spandrusyszyn",
   "license": "MIT",
   "dependencies": {
@@ -31,19 +29,20 @@
     "@actions/github": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.23.3",
-    "@babel/preset-env": "^7.23.7",
-    "@babel/preset-typescript": "^7.23.3",
-    "@illandril/eslint-config-foundryvtt": "^1.8.8",
-    "@types/jest": "^29.5.11",
+    "@babel/plugin-transform-modules-commonjs": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
+    "@babel/preset-typescript": "^7.24.6",
+    "@illandril/biome-config": "^1.2.0",
+    "@types/jest": "^29.5.12",
     "@vercel/ncc": "^0.38.1",
     "babel-jest": "^29.7.0",
     "babel-preset-minify": "^0.5.2",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "jest": "^29.7.0",
-    "jest-fail-on-console": "^3.1.2",
-    "npm-run-all2": "^6.1.1",
-    "rimraf": "^5.0.5",
-    "rollup": "^4.9.2"
+    "jest-fail-on-console": "^3.3.0",
+    "npm-run-all2": "^6.2.0",
+    "rimraf": "^5.0.7",
+    "rollup": "^4.18.0",
+    "typescript": "^5.4.5"
   }
 }
