--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "foundryvtt-package-release-action",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A GitHub Action to call the FoundryVTT Package Release API",
   "main": "index.js",
   "type": "module",
@@ -21,7 +21,9 @@
     "type": "git",
     "url": "git+https://github.com/illandril/FoundryVTT-package-release-action.git"
   },
-  "keywords": ["FoundryVTT"],
+  "keywords": [
+    "FoundryVTT"
+  ],
   "author": "Joe Spandrusyszyn",
   "license": "MIT",
   "dependencies": {
