--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "clean": "rimraf dist",
     "prebuild:run": "npm run clean",
     "build": "ncc build src/index.ts --out dist --minify --target es2022",
-    "build:watch": "npm run build -- --watch",
     "lint": "biome check .",
-    "lint:fix": "npm run lint -- --apply",
+    "lint:fix": "npm run lint -- --write",
     "type-check": "tsc --noEmit",
     "test": "jest",
     "test:coverage": "jest --coverage",
@@ -21,9 +20,7 @@
     "type": "git",
     "url": "git+https://github.com/illandril/FoundryVTT-package-release-action.git"
   },
-  "keywords": [
-    "FoundryVTT"
-  ],
+  "keywords": ["FoundryVTT"],
   "author": "Joe Spandrusyszyn",
   "license": "MIT",
   "dependencies": {
@@ -31,20 +28,13 @@
     "@actions/github": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.24.8",
-    "@babel/preset-env": "^7.24.8",
-    "@babel/preset-typescript": "^7.24.7",
     "@illandril/biome-config": "^1.4.0",
+    "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.12",
     "@vercel/ncc": "^0.38.1",
-    "babel-jest": "^29.7.0",
-    "babel-preset-minify": "^0.5.2",
-    "dotenv": "^16.4.5",
     "jest": "^29.7.0",
-    "jest-fail-on-console": "^3.3.0",
     "npm-run-all2": "^6.2.2",
     "rimraf": "^6.0.1",
-    "rollup": "^4.18.0",
     "typescript": "^5.5.4"
   }
 }
